[package]
name = "ende"
version = "0.1.0"
edition = "2021"

[dependencies]
ende-derive = { path = "ende-derive" }
thiserror = "1.0.57"
array-init = "2.1.0"
parse-display = "0.9.0"

# serde feature
serde = { version = "1.0.197", optional = true, features = ["derive"] }

# encryption feature
openssl = { version = "0.10.64", optional = true }
cryptostream = { version = "0.3.2", optional = true }

# compression feature
flate2 = { version = "1.0.28", optional = true }
zstd = { version = "0.13.0", optional = true }

[dev-dependencies]
bitflags = "2.4.2"
semver = { version = "1.0.22", features = ["serde"] }

[features]
all = ["serde", "encryption", "compression"]
serde = ["dep:serde"]
encryption = ["dep:openssl", "dep:cryptostream"]
compression = ["dep:flate2", "dep:zstd"]