[package]
name = "ende"
version = "0.1.0"
edition = "2021"

[dependencies]
ende-derive = { path = "ende-derive", optional = true }
thiserror = "1.0.57"
array-init = "2.1.0"
parse-display = "0.9.0"

# serde feature
serde = { version = "1.0.197", optional = true, features = ["derive"] }
smallvec = { version = "2.0.0-alpha.5", optional = true }

# encryption feature
openssl = { version = "0.10.64", optional = true }
cryptostream = { version = "0.3.2", optional = true }
zeroize = { version = "1.7.0", optional = true }

# compression feature
flate2 = { version = "1.0.28", optional = true }
zstd = { version = "0.13.0", optional = true }

[dev-dependencies]
bitflags = "2.4.2"
semver = { version = "1.0.22", features = ["serde"] }

[features]
all = ["derive", "serde", "encryption", "compression"]
serde = ["dep:serde", "dep:smallvec"]
encryption = ["dep:openssl", "dep:cryptostream", "dep:zeroize"]
compression = ["dep:flate2", "dep:zstd"]
derive = ["dep:ende-derive"]