[package]
name = "ende"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[package.metadata.playground]
features = ["all"]

[dependencies]
ende-derive = "1.0.0"
array-init = "2.1.0"
parse-display = "0.9.0"
widestring = { version = "1.0.2", features = [] }
embedded-io = { version = "0.6.1", features = [] }
embedded-io-adapters = { version = "0.6.1", features = ["std"], optional = true }

# serde feature
serde = { version = "1.0.197", optional = true, default-features = false }

# encryption feature
openssl = { version = "0.10.64", optional = true }
cryptostream = { version = "0.3.2", optional = true }

# compression feature
flate2 = { version = "1.0.28", optional = true }
zstd = { version = "0.13.0", optional = true }

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde"] }
bitflags = "2.4.2"
semver = { version = "1.0.22", features = ["serde"] }

[features]
# Enables all features. Includes serde support, encryption and compression, and the derive macros.
# The unstable feature still has to be manually enabled.
all = ["alloc", "std", "derive", "serde", "encryption", "compression"]

# Imports the alloc crate, enabling some additional features and Encode/Decode implementations,
# at the cost of portability
alloc = ["embedded-io/alloc", "serde?/alloc", "widestring/alloc"]

# Imports the std crate, enabling some additional features and Encode/Decode implementations,
# at the cost of portability
std = ["alloc", "embedded-io/std", "embedded-io-adapters", "serde?/std", "widestring/std"]

# Enables the serde compatibility layer.
serde = ["dep:serde"]

# Enables cryptography support.
encryption = ["std", "openssl", "cryptostream"]

# Enables compression / decompression support.
compression = ["std", "flate2", "zstd"]

# Enables the derive(Encode, Decode) macros.
derive = []

# Enables features only available in nightly.
unstable = []