[package]
name = "ende"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bohdloss/ende"
keywords = ["no_std", "ecoding", "ende", "parsing", "binary"]
categories = ["embedded", "encoding", "parsing", "no-std", "no-std::no-alloc"]
description = "An encoding library to work with any binary data format"
license = "MIT"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[package.metadata.playground]
features = ["std", "derive"]

[dependencies]
ende-derive = { version = "1", path = "../ende-derive" }
array-init = "2.1.0"
parse-display = "0.9.0"
bytemuck = { version = "1.15.0" }
embedded-io = { version = "0.6.1", default-features = false }

# serde feature
serde = { version = "1.0.197", optional = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde"] }
bitflags = "2.4.2"
semver = { version = "1.0.22", features = ["serde"] }

[features]
default = ["std"]

# Enables all features. Includes serde support, encryption and compression, and the derive macros.
# The unstable feature still has to be enabled separately.
all = ["alloc", "std", "derive", "serde"]

# Imports the alloc crate, enabling some additional features and Encode/Decode implementations,
# at the cost of portability
alloc = ["embedded-io/alloc", "serde?/alloc"]

# Imports the std crate, enabling some additional features and Encode/Decode implementations,
# at the cost of portability
std = ["alloc", "embedded-io/std", "serde?/std"]

# Enables the serde compatibility layer.
serde = ["dep:serde"]

# Enables the derive(Encode, Decode) macros.
derive = []

# Enables features only available in nightly.
unstable = ["ende-derive/unstable"]