[package]
name = "ender-derive"
version = "0.3.0"
edition = "2021"
description = "Macros for ender. Not meant to be used as a standalone crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features = ["full", "visit"] }
quote = "1.0.35"
proc-macro2 = "1.0.79"

[features]
default = []
unstable = []
debug = []